fix: ControlsFX Spreadsheet 用に javafx.base の内部パッケージを JVM で開放